2012-06-20 Roman
- UI.WebVision: Internal links processing for primitive "Document" is allowed but question about the iframe need clear is open now.


2012-06-19 Roman
- SYS, UI.QTStarter: OpenSCADA source tree version (work) changed to 0.8.1, no release yet. Splash is updated.
- !!:SYS: New system task's endrun mechanism is realized, based on signal SIGUSR1 and it checking by function TSYS::taskEndRun().
- XMLNode: The function root() is added for XML tree root obtaining from any it's child.
- !!:UI.VCAEngine: Documents generation into primitive "Document" is moved to separated task for main task lock prevent at processing time.
    On the document processing the result is updating for every 5 seconds. Attribute "process" is added for end processing control.
- !!:UI.Vision: QTWebKit using for primitive "Document" is added.
    WebKit is significant faster for QTextBrowser and open new features way.


2012-06-09 Roman
- DOC: More documents update for English, Russian and Ukrainian:
	AboutOpenSCADA, QuickStart, APIOpenSCADA, openscada, build, report, WLib.Main, Archive.FSArch, Transport.Serial, UI.VCAEngine.
    New documents add: moduleCreation, DAQ.BlockCalc.


2012-06-06 Roman
- DAQ.*, Archive: Archive's DB on creation from the DAQ parameter is set to DAQ controller DB of the parameter.
- !!:FIX:Archive: Enable archive at miss source parameter is prevented.
    Stop archive on source type and address change is added.
    Reload archives from DB (no base), which been made by archive's storage, is added.
- Archive.FSarch: Debug maessage about "Write data block to archive file error" has made display only for flag "copyErrValFiles".


2012-05-30 Roman
- !!:FIX:DB.MySQL, DB.PostgreSQL: DateTime UTC-string representation field's conversion from and to Unix-time is fixed for
    local TimeZone and SummerTime conversion.


2012-05-28 Roman
- !:FIX:Archives, UI.Vision, UI.WebVision: Hang at trend build for constant big value like 1e-37 is fixed.


2012-05-27 Roman